fixed consumer, use case needs to be fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       KAFKA_BROKER: ${KAFKA_BROKER}
       KAFKA_INPUT_TOPIC: ${KAFKA_INPUT_TOPIC}
       KAFKA_AUTO_OFFSET_RESET: ${KAFKA_AUTO_OFFSET_RESET}
+      KAFKA_GROUP_ID: ${KAFKA_GROUP_ID}
 
       # MySQL
       MYSQL_HOST: ${MYSQL_HOST}
