refactor(variable name for container path)

--- a/.example.env
+++ b/.example.env
@@ -33,8 +33,8 @@ MONGO_DB=your_mongo_db
 # ===============================
 # Storage Config
 # ===============================
-HOST_VIDEO_PATH=./storage # carpeta en el PC
-CONTAINER_VIDEO_PATH=/app/storage/videos # ruta dentro del contenedor
+HOST_PATH=./storage # carpeta en el PC
+CONTAINER_PATH=/app/storage/videos # ruta dentro del contenedor
 
-# Todo lo que el servicio en el contenedor lea/escriba en ${CONTAINER_VIDEO_PATH} 
+# Todo lo que el servicio en el contenedor lea/escriba en ${CONTAINER_PATH} 
 # en realidad se está leyendo/escribiendo directamente en el PC.
