--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,9 @@ services:
       MONGO_DB: ${MONGO_DB}
 
       # Storage
-      CONTAINER_VIDEO_PATH: ${CONTAINER_VIDEO_PATH}
+      CONTAINER_PATH: ${CONTAINER_PATH}
     volumes:
-      - ${HOST_VIDEO_PATH}:${CONTAINER_VIDEO_PATH}
+      - ${HOST_PATH}:${CONTAINER_PATH}
     restart: unless-stopped
     networks:
       - app-network
